--- a/vendor-service/src/main/resources/application.properties
+++ b/vendor-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.http.port=9002
 server.port=9002
 # DATABASE
-spring.datasource.url=jdbc:mysql://localhost/system_m2?useSSL=false
-spring.datasource.dbname=system_m2
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.dbname=${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
