--- a/vendor-service/Dockerfile
+++ b/vendor-service/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-RUN ./mvnw dependency:resolve
+RUN chmod +x mvnw && ./mvnw dependency:resolve
 
 COPY src ./src
 
